--- a/src/components/ToDoList.module.css
+++ b/src/components/ToDoList.module.css
@@ -182,6 +182,12 @@
   }
 }
 
+.taskButtons {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 /* New styles for refresh icon button */
 .refreshContainer {
   display: flex;
@@ -196,6 +202,7 @@
   color: #171e69;
   font-size: 24px;
   transition: transform 0.2s ease;
+  padding: 12px;
 }
 
 .refreshButton:hover {
@@ -214,4 +221,5 @@
   color: #171e69;
   font-size: 24px;
   transition: transform 0.2s ease;
+  padding: 12px;
 }
