--- a/src/components/ConfigPanel/ConfigPanel.css
+++ b/src/components/ConfigPanel/ConfigPanel.css
@@ -24,6 +24,7 @@
   font-weight: 600;
   margin: 8px auto;
   color: #111827;
+  display: flex;
 }
 
 .config-card p {
@@ -82,4 +83,85 @@
 
 .clear-data-button:hover {
   background-color: #ffecb3;
+}
+
+/* General Settings Form Styles */
+.general-settings-item {
+  margin-bottom: 12px;
+}
+
+.general-settings-item label:not(.switch) {
+  display: inline-block;
+  width: 130px;
+  margin-right: 10px;
+  font-size: 0.95rem;
+  color: #4b5563;
+}
+
+.general-settings-item .hours-text {
+  font-size: 0.95rem;
+  color: #4b5563;
+  margin-left: 10px;
+}
+
+
+.general-settings-item select,
+.general-settings-item input {
+  padding: 8px 12px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  font-size: 0.95rem;
+  color: #111827;
+}
+
+.general-settings-item select:focus,
+.general-settings-item input:focus {
+  border-color: #a1a1aa;
+  outline: none;
+}
+
+/* Switch Styles */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 40px;
+  height: 22px;
+}
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  transition: .4s;
+  border-radius: 22px;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 18px;
+  width: 18px;
+  left: 2px;
+  bottom: 2px;
+  background-color: white;
+  transition: .4s;
+  border-radius: 50%;
+}
+
+.switch input:checked + .slider {
+  background-color: #2196F3;
+}
+
+.switch input:checked + .slider:before {
+  transform: translateX(18px);
 }
