--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,13 @@ a:hover {
   color: #535bf2;
 }
 
+/* to fix dark mode */
+
+input, textarea {
+  font-family: 'Plus Jakarta Sans', sans-serif !important;
+  background-color: white !important;
+}
+
 body {
   font-family: 'Plus Jakarta Sans', sans-serif !important;
   margin: 0;
